# hintkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  SECURITY.md  dist-workspace.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  spec_request.yml
.github/workflows/: ci.yml
crates/hintkit/: Cargo.toml
crates/hintkit-parser/: Cargo.toml
crates/hintkit-parser/src/: lib.rs
crates/hintkit-spec/: Cargo.toml
crates/hintkit-spec/src/: lib.rs
crates/hintkit-specs-bundled/: Cargo.toml
crates/hintkit-specs-bundled/data/: aws.hintkitspec.json  bun.hintkitspec.json  cargo.hintkitspec.json  cd.hintkitspec.json  cp.hintkitspec.json  curl.hintkitspec.json  docker.hintkitspec.json  fd.hintkitspec.json  find.hintkitspec.json  gh.hintkitspec.json  git.hintkitspec.json  grep.hintkitspec.json  just.hintkitspec.json  kubectl.hintkitspec.json  ls.hintkitspec.json  make.hintkitspec.json  mv.hintkitspec.json  node.hintkitspec.json  npm.hintkitspec.json  pip.hintkitspec.json  pnpm.hintkitspec.json  python.hintkitspec.json  rg.hintkitspec.json  rm.hintkitspec.json  scp.hintkitspec.json  ssh.hintkitspec.json  tar.hintkitspec.json  terraform.hintkitspec.json  wget.hintkitspec.json  yarn.hintkitspec.json
crates/hintkit-specs-bundled/src/: lib.rs
crates/hintkit/src/: cli.rs  engine.rs  generators.rs  input.rs  line_buffer.rs  main.rs  output.rs  pty.rs  shell_integration.rs  state.rs
crates/hintkit/tests/: osc_state.rs  paste_100kb.rs  pty_smoke.rs
shell/: hintkit.bash  hintkit.zsh
tools/ingest-specs/: ingest.mjs  package.json
