[workspace]
resolver = "2"
members = [
    "crates/hintkit",
    "crates/hintkit-parser",
    "crates/hintkit-spec",
    "crates/hintkit-specs-bundled",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahsanjaved001/hintkit"
homepage = "https://github.com/ahsanjaved001/hintkit"
authors = ["Ahsan Javed <ahsanjvd001@gmail.com>"]

# Release profile used by cargo-dist. Thin LTO trades a small amount of binary
# size for much faster link times vs full LTO; sufficient for the 10MB budget.
[profile.dist]
inherits = "release"
lto = "thin"

# Workspace-shared dependency versions. Member crates reference these via
# `dep.workspace = true`.
[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.29"
include_dir = "0.7"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
