[package]
name = "hintkit-spec"
description = "Spec data structures and loader for hintkit (internal crate)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
