[package]
name = "hintkit-specs-bundled"
description = "Bundled compiled .hintkitspec files for hintkit (internal crate)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
hintkit-spec = { path = "../hintkit-spec" }
include_dir.workspace = true
serde_json.workspace = true
