[package]
name = "hintkit"
description = "Lightweight, local, no-account terminal autocomplete."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
publish = false

[[bin]]
name = "hintkit"
path = "src/main.rs"
