[package]
name = "hintkit"
description = "Lightweight, local, no-account terminal autocomplete."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
publish = false

[[bin]]
name = "hintkit"
path = "src/main.rs"

[features]
# `debug` enables `tracing`-based diagnostic logs gated by RUST_LOG. Off in
# default release builds (SPEC §9 "Never log keystrokes").
default = []
debug = []

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
portable-pty.workspace = true
signal-hook.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
